--- a/index.html
+++ b/index.html
@@ -4,18 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>How 60 Minutes a Day Can Change Your Life</title>
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./prism.css" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/prism.css" />
   </head>
 
   <body>
     <div class="container">
       <p class="sub-title">Life Hacks</p>
       <h1>How 60 Minutes a Day Can Change Your Life</h1>
-      <p>
+      <p class="desc">
         The simple commitment most people avoid that can dramatically transform
         you
       </p>
+      <div class="user">
+        <img src="./assets/img/avatar.jpg" alt="" class="user__avt" />
+        <p class="user__name">Roy Phang</p>
+        <a href="" class="btn-follow">Follow</a>
+        <p class="time-read">6 min read</p>
+        <div class="dot"></div>
+        <p class="date">Dec 17, 2024</p>
+      </div>
+
       <img
         style="width: 100%"
         src="https://miro.medium.com/v2/resize:fit:4800/format:webp/1*mQMV9oRJY-6lLMpqUJKehw.jpeg"
@@ -46,22 +56,6 @@
       </p>
       <p>How do I know this? Because I’ve done it myself.</p>
       <h2>The Simple Math of Transformation</h2>
-      <pre>
-    <code class="language-html">
-    &lt;!DOCTYPE html&gt;
-    &lt;html lang=&quot;en&quot;&gt;
-        &lt;head&gt;
-        &lt;meta charset=&quot;UTF-8&quot; /&gt;
-        &lt;meta
-            name=&quot;viewport&quot;
-            content=&quot;width=device-width, initial-scale=1.0&quot;
-        /&gt;
-         &lt;title&gt;Document&lt;/title&gt;
-        &lt;/head&gt;
-        &lt;body&gt;&lt;/body&gt;
-    &lt;/html&gt;
-    </code>
-     </pre>
       <p>
         One hour per day may seem small, but over time, it compounds into
         something significant:
@@ -249,6 +243,6 @@
       </p>
       <p>The file. The system. The daily ritual.</p>
     </div>
-    <script src="./prism.js"></script>
+    <script src="./assets/js/prism.js"></script>
   </body>
 </html>
